# Projet-Web-Mobile-GL4

./: .gitignore  LICENSE  MATCHES_PAGINATION_BEHAVIORSUBJECT.md  README.md  class-diagram.puml  package-lock.json
back/: .env  .gitignore  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
back/Config/: .env.example
back/src/: app.controller.ts  app.module.ts  main.ts
back/src/Common/: Common.entity.ts  global.module.ts
back/src/Decorator/: user.decorator.ts
back/src/Enums/: matchstatus.enum.ts  notification-type.enum.ts
back/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  firebase.service.ts  user.controller.ts
football-streaming-core/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test-client.html
football-streaming-core/src/: config.rs  main.rs
football-streaming-core/src/actors/: broadcaster.rs  mod.rs  websocket.rs
football-streaming-core/src/handlers/: websocket_handler.rs
football-streaming-core/src/models/: api_response.rs  events.rs  match_data.rs  mod.rs
football-streaming-core/src/services/: event_detector.rs  mock_poller.rs  mod.rs  poller.rs
front/: .env  .gitignore  LEAGUE_STANDINGS_FEATURE.md  REUSING_WEBSOCKET_SERVICES.md  angular.json  generate-tree.ps1  package-lock.json  package.json
front/src/: index.html  styles.css
mobile/: LINEUPS_CHANGES_README.md  LINEUPS_COMPARISON.md  LINEUPS_TESTING_GUIDE.md  LINEUPS_VISUAL_CHECKLIST.md  README.md  build.yaml  firebase.json  generate_api.bat  pubspec.yaml
mobile/lib/: firebase_options.dart  main.dart
(+567 files in other folders)
