[package]
name = "football-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-web-actors = "4.2"
actix = "0.13"
actix-rt = "2.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
# Pin `time` to avoid pulling edition2024-only releases on older Cargo (e.g. Docker image toolchain).
time = "=0.3.44"

# Collections
dashmap = "5.5"